# Capstone

./: .codedocs  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  client.cpp  config.h  configure  doxyfile  main.cpp
.github/workflows/: Capstone.yml
data/: architecture.mdj  res.xml
docs/: architecture.mdj
examples/: game_config.h  main.cpp
examples/click_box/: click_box.cpp  click_box.h
examples/hello_world/: hello_world.cpp  hello_world.h
examples/hello_world/data/: res.xml
examples/physics/: helper.cpp  helper.h  physics.h
examples/physics/MainActor/: MainActor.h
examples/physics/Planet/: Planet.cpp
examples/physics/Spaceship/: Spaceship.cpp  Spaceship.h
examples/physics/box2d/: Box2DDebugDraw.cpp  Box2DDebugDraw.h
examples/swipable/: swipable.cpp  swipable.h
lib/: helper.h
lib/Algebra/: algebra.cpp  algebra.h
lib/Data/: Address.cpp  Address.h  Client.cpp  Client.h  Direction.cpp  Direction.h  Item.cpp  Item.h  Spaceship.cpp  Spaceship.h
lib/Direction/: Direction.h
lib/Network/: Backend.cpp  Backend.h  Client.cpp  Client.h  config.h  synchro.capnp
lib/Network/ItemSink/: ItemSink.h
lib/Network/Registrar/: Registrar.cpp  Registrar.h
lib/Network/ShipHandle/: ShipHandle.cpp  ShipHandle.h
lib/Network/ShipRegistrar/: ShipRegistrar.cpp  ShipRegistrar.h
lib/Network/ShipSink/: ShipSink.cpp  ShipSink.h
lib/Network/Subscriber/: Subscriber.cpp  Subscriber.h
lib/Network/Synchro/: Synchro.cpp  Synchro.h
lib/Random/: RNG.cpp  RNG.h  bounds.h  random.h
lib/Random/RNG/: HashedRNG.cpp  HashedRNG.h
lib/Random/distribution/: distribution.cpp  distribution.h
lib/Random/distribution/uniform/: uniform.h
lib/Server/: Server.cpp  Server.h  ShipCallback.h  Synchro.cpp  Synchro.h  gen_proto  synchro.capnp
lib/Server/Callback/: Callback.cpp  Callback.h  DirectionCallback.cpp  DirectionCallback.h  ItemSink.cpp  ItemSink.h  ShipCallback.cpp  ShipCallback.h
lib/random/: random.h
lib/random/RNG/: HashedRNG.h
lib/random/distribution/: distribution.cpp  distribution.h
lib/random/distribution/uniform/: uniform.h
setup/: Catch2.sh  SDL.sh  box2d.sh  capnproto.sh
src/: Game.cpp  Game.h  config.h  env.h  game_config.h  main.cpp  main.cpp.old
src/Backend/: Backend.cpp  Backend.h  Connection.cpp  Connection.h  backend.cpp  backend.h
src/Collision/: CollisionEvent.cpp  CollisionEvent.h  CollisionListener.cpp  CollisionListener.h
src/Game/: Game.cpp  Game.h  config.h  game_config.h
src/Game/Collision/: CollisionEvent.cpp  CollisionEvent.h  CollisionListener.cpp  CollisionListener.h
src/Game/Dialog/: Dialog.cpp  Dialog.h
src/Game/MainActor/: MainActor.cpp  MainActor.h
src/Game/Planet/: Planet.cpp  Planet.h
src/Game/Scene/: GameScene.cpp  GameScene.h  MenuScene.cpp  MenuScene.h  Scene.h  config.h
src/Game/Spaceship/: KeyboardSpaceship.cpp  KeyboardSpaceship.h  RemoteSpaceship.cpp  RemoteSpaceship.h  Spaceship.cpp  Spaceship.h
src/Game/UI/: Button.cpp  Button.h  Dialog.cpp  Dialog.h  Text.cpp  Text.h
src/Game/World/: World.cpp  World.h
src/Game/data/: res.xml
src/Planet/: Planet.cpp  Planet.h
src/Scene/: GameScene.cpp  GameScene.h  MenuScene.cpp  MenuScene.h  Scene.cpp  Scene.h
src/Server/: Server.cpp  Server.h  Server.h.bak  synchro.capnp
src/Spaceship/: KeyboardSpaceship.cpp  KeyboardSpaceship.h  RemoteSpaceship.cpp  RemoteSpaceship.h  Spaceship.cpp  Spaceship.h
src/UI/: Button.cpp  Button.h  Dialog.cpp  Dialog.h  Input.cpp  Input.h  Text.cpp  Text.h
src/World/: World.cpp  World.h
src/click_box/: click_box.cpp  click_box.h
src/data/: res.xml
src/data/fonts/: kt-liberation.fnt
src/debug/: Box2DDebugDraw.cpp  Box2DDebugDraw.h
src/example/: example.cpp  example.h
src/physics/: helper.cpp  physics.cpp  physics.h
src/physics/MainActor/: MainActor.cpp  MainActor.h
src/physics/Planet/: Planet.cpp  Planet.h
src/physics/Spaceship/: Spaceship.cpp  Spaceship.h
src/physics/data/: res.xml
src/swipable/: swipable.cpp  swipable.h
src/swipable/data/: res.xml
test/: main.cpp
test/lib/: HashedRNG.cpp
test/lib/Random/: HashedRNG.cpp
test/src/: Backend.cpp  Planet.cpp  Spaceship.cpp  World.cpp  test.cpp
test/src/Game/World/: World.cpp
test/src/World/: World.cpp
